# productApi

./: index.py  pyproject.toml  requirements.txt
restApiDataBase/: app.py  blauwdruk.py
restApiDataBase/database/: models.py
restApiDataBase/resources/: __init__.py  auth.py  errors.py  product.py  reset_password.py  routes.py
restApiDataBase/services/: mail_service.py
restApiDataBase/templates/: index.html  signup.html
tests/: test_restapidatabase.py
