[tool.poetry]
name = "restApiDataBase"
version = "0.1.0"
description = ""
authors = ["billyCage77 <you@example.com>"]

[tool.poetry.dependencies]
python = "3.10.2"
Flask = "2.1.1"
flask-mongoengine = "1.0.0"
Flask-RESTful = "0.3.9"
Flask-Bcrypt = "0.7.1"
Flask-JWT-Extended = "4.3.1"
Flask-Mail = "0.9.1"

[tool.poetry.dev-dependencies]
pytest = "6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
